<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/white"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        >
            <ImageView
                android:id="@+id/authorAvatar"
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size"
                android:contentDescription="@string/avatar_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/barrier"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginLeft="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@id/published"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toEndOf="@id/authorAvatar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@sample/posts.json/data/author" />

            <TextView
                android:id="@+id/published"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_spacing"
                android:layout_marginRight="@dimen/common_spacing"
                android:ellipsize="end"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@id/authorName"
                app:layout_constraintBottom_toTopOf="@id/barrier"
                app:layout_constraintEnd_toStartOf="@id/menu"
                app:layout_constraintStart_toStartOf="@id/authorName"
                tools:text="@sample/posts.json/data/published"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/more_menu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/OptionsButton"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="published, authorAvatar, menu"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="64dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="barrier, menu, authorName, published, authorAvatar"
                />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/postTextColor"
                android:textColorLink="@color/beige"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/barrier"
                app:lineHeight="19dp"
                android:paddingTop="16dp"
                tools:text="@sample/posts.json/data/text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/attachments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share"
                app:layout_constraintTop_toBottomOf="@id/content"
                style="@style/AttachmentsIcon"
                android:text="@string/attachments"
                android:visibility="gone"
                />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
