<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_orange_gradient"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="left"
                    tools:src="@drawable/electro_club_icon_white_256"
                    />

                <ImageView
                    android:id="@+id/transportImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="-30dp"
                    android:layout_marginTop="50dp"
                    tools:src="@drawable/electro_club_icon_white_256"
                    />

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="User Nickname"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/transportName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Transport"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="320dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_messages"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/messages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="125"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/endOrange"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_rating"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1205"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/endOrange"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <Button
        android:id="@+id/chat"
        android:textColor="#fff"
        android:background="@drawable/buttonstyleithgradient"
        android:layout_marginTop="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chat"/>
</LinearLayout>